tests/e2e/path_index_no_null.error
Error: syntax error in story at line 2, column 7

2|    c = b[null]
            ^^^^

E0158: Cannot use `null` in index
