tests/e2e/path_index_no_null.story
b = {"foo": "bar"}
c = b[null]
